--- a/board.html
+++ b/board.html
@@ -15,7 +15,7 @@
     <script src="add_task.js"></script>
 </head>
 
-<body id="body" onload="render('board')" id="body">
+<body id="body" onload="render('board'); initAddTask()" id="body">
     <div w3-include-html="assets/templates/add_task_template.html" class="d-none" id="add-task-overlay-board"></div>
     <div w3-include-html="assets/templates/help_template.html"></div>
 
