--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
     <script src="add_task.js"></script>
 </head>
 
-<body onload="render('contacts'), showContacts()" onresize="showContacts(), initAddTask()" id="body">
+<body onload="render('contacts'), showContacts()" onresize="showContacts()" id="body">
 
     <div w3-include-html="assets/templates/add_task_template.html" class="d-none" id="add-task-overlay-board"></div>
 
