--- a/board.html
+++ b/board.html
@@ -13,6 +13,7 @@
 
     <script src="script.js"></script>
     <script src="add_task.js"></script>
+    <script src="mini_backend.js"></script>
 </head>
 
 <body id="body" onload="render('board')" id="body">
