--- a/add_task.html
+++ b/add_task.html
@@ -12,6 +12,7 @@
 
     <script src="script.js"></script>
     <script src="add_task.js"></script>
+    <script src="mini_backend.js"></script>
 </head>
 
 <body onload="render('addtask'); initAddTask()" id="body">
