--- a/contacts.html
+++ b/contacts.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="contacts_style.css">
     <link rel="stylesheet" href="fonts.css">
     <script src="contacts.js"></script>
-
     <script src="script.js"></script>
     <script src="add_task.js"></script>
+    <script src="mini_backend.js"></script>
 </head>
 
 <body onload="render('contacts'), showContacts()" onresize="showContacts()" id="body">
@@ -109,7 +109,6 @@
                                     <button type="submit">Save</button>
                                 </div>
                             </form>
-                            
                         </div>
                     </div>
                 </div>
