--- a/hello_mobile.html
+++ b/hello_mobile.html
@@ -10,6 +10,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="hello_mobile_style.css">
     <link rel="stylesheet" href="fonts.css">
+    <script src="mini_backend.js"></script>
 </head>
 <body onload="render('hello')">
     <div w3-include-html="assets/templates/mobile_template.html"></div>
