--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="fonts.css">
 
     <script src="index.js"></script>
+    <script src="mini_backend.js"></script>
 </head>
 
 <body>
