--- a/summary.html
+++ b/summary.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="fonts.css">
 
     <script src="script.js"></script>
+    <script src="mini_backend.js"></script>
 </head>
 
 <body onload="render('summary')" id="body">
