--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <link rel="stylesheet" href="fonts.css">
 
     <script src="index.js"></script>
+    <script src="script.js"></script>
     <script src="mini_backend.js"></script>
 </head>
 
-<body>
+<body onload="init()">
     <div class="complete-page">
         <div class="join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>
         <div id="signUp-button" class="login-head">
