--- a/add_task.html
+++ b/add_task.html
@@ -15,7 +15,7 @@
     <script src="mini_backend.js"></script>
 </head>
 
-<body onload="render('addtask'); initAddTask()" id="body">
+<body onload="init(), render('addtask'); initAddTask()" id="body">
 
     <div w3-include-html="assets/templates/mobile_template.html"></div>
     <div w3-include-html="assets/templates/help_template.html"></div>
