--- a/hello_mobile.html
+++ b/hello_mobile.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="fonts.css">
     <script src="mini_backend.js"></script>
 </head>
-<body onload="render('hello')">
+<body onload="init(), render('hello')">
     <div w3-include-html="assets/templates/mobile_template.html"></div>
     <div class="content-mobile">
         <div><span>Good morning</span><span>,</span></div>
