--- a/contacts.html
+++ b/contacts.html
@@ -17,6 +17,7 @@
     <script src="contacts.js"></script>
     <script src="script.js"></script>
     <script src="add_task.js"></script>
+    <script src="new_contact.js"></script>
     
 </head>
 
@@ -47,17 +48,17 @@
 
                         <div class="addedit-contact-input-fields">
                             
-                            <form style="width: 100%" onsubmit="hallo(); return false">
+                            <form style="width: 100%" onsubmit="addNewContact(); return false">
                                 <div class="name-field">
-                                    <input required="true" type="text" class="form-control" placeholder="Name"
+                                    <input id="contact-name" required="true" type="text" class="form-control" placeholder="Name"
                                         aria-label="Name">
                                 </div>
                                 <div class="email-field">
-                                    <input required="true" type="email" class="form-control" placeholder="Email"
+                                    <input id="contact-email" required="true" type="email" class="form-control" placeholder="Email"
                                         aria-label="Email">
                                 </div>
                                 <div class="phone-field">
-                                    <input required="true" type="number" minlength="5" class="form-control" placeholder="Phone"
+                                    <input id="contact-phone" required="true" type="number" minlength="5" class="form-control" placeholder="Phone"
                                         aria-label="Phone">
                                 </div>
 
