--- a/add_task.html
+++ b/add_task.html
@@ -13,7 +13,7 @@
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
     <script src="add_task.js"></script>
-    
+
 </head>
 
 <body onload="init(), render('addtask'); initAddTask()" id="body">
@@ -63,13 +63,20 @@
                         <div id="assign-to-list" class="dropdown-check-list-contacts" tabindex="100">
                             <span class="anchor">Select Contacts</span>
                             <ul class="items">
-                                <li><input class="input-contact" type="checkbox" />1 </li>
-                                <li><input class="input-contact" type="checkbox" />2</li>
-                                <li><input class="input-contact" type="checkbox" />3 </li>
-                                <li><input class="input-contact" type="checkbox" />4 </li>
-                                <li><input class="input-contact" type="checkbox" />5 </li>
-                                <li><input class="input-contact" type="checkbox" />6 </li>
-                                <li><input class="input-contact" type="checkbox" />7</li>
+                                <li class="input-contact-listitem" value="1"><input class="input-contact"
+                                        type="checkbox" />1 </li>
+                                <li class="input-contact-listitem" value="2"><input class="input-contact"
+                                        type="checkbox" />2</li>
+                                <li class="input-contact-listitem" value="3"><input class="input-contact"
+                                        type="checkbox" />4 </li>
+                                <li class="input-contact-listitem" value="4"><input class="input-contact"
+                                        type="checkbox" />5 </li>
+                                <li class="input-contact-listitem" value="5"><input class="input-contact"
+                                        type="checkbox" />6 </li>
+                                <li class="input-contact-listitem" value="6"><input class="input-contact"
+                                        type="checkbox" />7</li>
+                                <li class="input-contact-listitem" value="7"><input class="input-contact"
+                                        type="checkbox" />3 </li>
                             </ul>
                         </div>
                     </div>
@@ -105,13 +112,13 @@
             <div id="assign-to-list-mobile" class="dropdown-check-list-contacts" tabindex="100">
                 <span class="anchor">Select Contacts</span>
                 <ul class="items">
-                    <li><input class="input-contact" type="checkbox" />1 </li>
-                    <li><input class="input-contact" type="checkbox" />2</li>
-                    <li><input class="input-contact" type="checkbox" />3 </li>
-                    <li><input class="input-contact" type="checkbox" />4 </li>
-                    <li><input class="input-contact" type="checkbox" />5 </li>
-                    <li><input class="input-contact" type="checkbox" />6 </li>
-                    <li><input class="input-contact" type="checkbox" />7</li>
+                    <li class="input-contact-listitem" value="1"><input class="input-contact" type="checkbox" />1 </li>
+                    <li class="input-contact-listitem" value="2"><input class="input-contact" type="checkbox" />2</li>
+                    <li class="input-contact-listitem" value="3"><input class="input-contact" type="checkbox" />4 </li>
+                    <li class="input-contact-listitem" value="4"><input class="input-contact" type="checkbox" />5 </li>
+                    <li class="input-contact-listitem" value="5"><input class="input-contact" type="checkbox" />6 </li>
+                    <li class="input-contact-listitem" value="6"><input class="input-contact" type="checkbox" />7</li>
+                    <li class="input-contact-listitem" value="7"><input class="input-contact" type="checkbox" />3 </li>
                 </ul>
             </div>
             <span>Prio</span>
