--- a/add_task.html
+++ b/add_task.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body onload="initAddTask()" id="body">
+<body onload="initAddTask(), render('addtask'); " id="body">
 
     <div w3-include-html="assets/templates/mobile_template.html"></div>
     <div w3-include-html="assets/templates/help_template.html"></div>
@@ -35,15 +35,14 @@
                         <textarea required placeholder="Enter a description" id="input-description"></textarea>
                         <span>Category</span>
                         <select required id="select-category" onchange="showAddCategory()">
-                            <option disabled selected>Select task category</option>
-                            <option id="new-category-selected" style="background-color: rgb(161, 161, 255);">New Category</option>
                         </select>
                         <div class="new-category d-none" id="create-category">
                             <div class="new-category-name">
                                 <input id="new-category" placeholder="Name"></input>
                                 <button onclick="dismissCategory()" type="button"><img style="height: 18px;"
                                         src="assets/img/close-button-addtask.svg"></button>
-                                <button onclick="createNewCategory()" type="button"><img src="assets/img/check-addtask.svg"></button>
+                                <button onclick="createNewCategory()" type="button"><img
+                                        src="assets/img/check-addtask.svg"></button>
                             </div>
                             <div class="select-color-category">
                                 <div onclick="selectColor(1)" id="color1" style="background-color: #FC71FF;"></div>
@@ -117,12 +116,26 @@
             <span>Description</span>
             <textarea required placeholder="Enter a description" id="input-description-mobile"></textarea>
             <span>Category</span>
-            <select required id="select-category-mobile">
-                <option value="" disabled selected>Select task category</option>
-                <option>New Category</option>
-                <option value="sales">Sales</option>
-                <option value="backoffice">Backoffice</option>
+            <select required id="select-category-mobile" onchange="showAddCategoryMobile()">
             </select>
+            <div class="new-category d-none" id="create-category-mobile">
+                <div class="new-category-name">
+                    <input id="new-category-mobile" placeholder="Name"></input>
+                    <button onclick="dismissCategoryMobile()" type="button"><img style="height: 18px;"
+                            src="assets/img/close-button-addtask.svg"></button>
+                    <button onclick="createNewCategoryMobile()" type="button"><img
+                            src="assets/img/check-addtask.svg"></button>
+                </div>
+                <div class="select-color-category">
+                    <div onclick="selectColor(1)" id="color1-mobile" style="background-color: #FC71FF;"></div>
+                    <div onclick="selectColor(2)" id="color2-mobile" style="background-color: #FF7A00;"></div>
+                    <div onclick="selectColor(3)" id="color3-mobile" style="background-color: #1FD7C1;"></div>
+                    <div onclick="selectColor(4)" id="color4-mobile" style="background-color: #2AD300;"></div>
+                    <div onclick="selectColor(5)" id="color5-mobile" style="background-color: red;"></div>
+                    <div onclick="selectColor(6)" id="color6-mobile" style="background-color: #8AA4FF;"></div>
+                    <div onclick="selectColor(7)" id="color7-mobile" style="background-color: blue;"></div>
+                </div>
+            </div>
             <span>Assigned to</span>
             <div id="assign-to-list-mobile" class="dropdown-check-list-contacts" tabindex="100">
                 <span class="anchor">Select Contacts</span>
