--- a/contacts.html
+++ b/contacts.html
@@ -133,7 +133,7 @@
                             contact
                             <img src="assets/img/add_contact_icon.png"></button>
                     </div>
-                    <div id="all-contacts" class="all-contacts" style="width: 100%;">
+                    <div id="all-contacts" class="all-contacts-div" style="width: 100%;">
                         <!--<div class="alphabet-box">
                             <div class="first-letter-box">
                                 <h3>A</h3>
