--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                     <div class="login-guestlogin">
                         <button class="button hover-dark" style="width: 110px;">Log in</button>
-                        <div class="guestLogin-button hover-bright">Guest Log in</div>
+                        <div onclick="guestLogin()" class="guestLogin-button hover-bright">Guest Log in</div>
                     </div>
                 </form>
             </div>
