--- a/board.html
+++ b/board.html
@@ -13,6 +13,7 @@
 
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
+    <script src="board.js"></script>
     <script src="add_task.js"></script>
     
 </head>
