--- a/contacts.html
+++ b/contacts.html
@@ -161,7 +161,7 @@
                         </div>
 
                         <div class="name">
-                            <div id="bigInitials" class="initials-big">
+                            <div id="bigInitials" class="initials-big hover" onclick="changeContactColor()">
                                 <div id="bigContactInitials"></div>
                             </div>
                             <div class="name-addTask">
